--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,358 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+:root{
+    --primary-color: #FFA500;
+    --white-color: #FFFFFF;
+}
+
+body{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 100vw;
+}
+
+section{
+    padding: 0 6rem;
+}
+
+li{
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+.btn{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    outline: none;
+    border: none;
+    background-color: var(--white-color);
+    padding: 0.6rem;
+    color: var(--primary-color);
+    font-size: 1.4rem;
+    font-weight: 600;
+    border-radius: 2%;
+    cursor: pointer;
+    transition: box-shadow 0.2s ease-in-out,
+                letter-spacing 0.2s ease-in-out;
+}
+
+.btn:hover{
+    box-shadow: 1px 1px 10px 1px var(--primary-color);
+    letter-spacing: 2px;
+}
+
+/* Header Section Styles Start */
+
+header{
+    position: fixed;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 6rem;
+    background-color: var(--primary-color);
+    box-shadow: 1px 1px 4px 1px var(--white-color);
+}
+
+.logo h1, .navigation__links a{
+    color:var(--white-color);
+}
+
+.logo h1{
+    letter-spacing: 0.2rem;
+}
+
+.navigation{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.navigation__links a{
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+
+.navigation__links:hover, .current-page{
+    border-bottom: 2px solid var(--white-color);
+}
+
+.hamburger{
+    display: none;
+}
+
+.close{
+    display: none;
+}
+
+/* Header Section Styles End */
+
+
+/* Hero Section Styles Start */
+
+.hero{
+    height: 100vh;
+    display: flex;
+    background-image: linear-gradient(#FFA6005C,#FFA600BF),
+                      url("../Images/hero-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hero__description, .about__description{
+    flex-basis : 50%;
+    padding: 4rem 0;
+}
+
+.hero__description h2, .about-us h2{
+    text-wrap: nowrap;
+    border-bottom: 2px solid var(--primary-color);
+    color: var(--white-color);
+    padding-top: 2rem;
+    font-size: 2rem;
+}
+
+.hero__description h4, .about__description h4{
+    line-height: 40px;
+    font-size: 1.4rem;
+}
+
+
+.hero__image, .about__image{
+    display: block;
+    max-width: 100%;
+    margin: 4rem 0;
+}
+
+/* Hero Section Styles End */
+
+/* About US Page Styles Start */
+
+.about-us{
+    padding: 0;
+}
+
+.about-us h2{
+    color: var(--primary-color);
+    border-bottom: none;
+    text-align: center;
+    padding-top: 6rem;
+    text-decoration: underline;
+}
+
+.about{
+    padding: 0 6rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.about:nth-child(odd){
+    background-image: linear-gradient(#FFA6005C,#FFA600BF);  
+}
+
+.about-hero__description h2{
+    text-align: center;
+}
+
+/* About US Page Styles End */
+
+
+/* Careers Page Styles Start */
+
+.careers{
+    background-image: linear-gradient(#FFA6005C,#ffa60088),
+                      url("../Images/hero-bg.jpg");
+    background-size: cover;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+
+.careers h2{
+    color: var(--white-color);
+    margin: 2rem 0;
+    border-bottom: 1px dashed;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.careers table{
+    border-collapse: collapse;
+}
+
+.careers table thead{
+    font-size: 1.5rem;
+}
+
+.careers table th, .careers table tr, .careers table td{
+    border: 1px solid var(--primary-color);
+    padding: 1rem;
+}
+
+.careers table th{
+    background-color: var(--primary-color);
+    border: 1px solid var(--white-color);
+}
+
+.careers table td{
+    background-color: var(--white-color);
+}
+
+.careers table tr td:first-child{
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+/* Careers Page Styles End */
+
+/* Contact Us Styles Start */
+
+.contact{
+    width: 80%;
+    margin: auto;
+    height: 100vh;
+}
+
+.contact h2{
+    padding-top:6rem;
+    color: #6A4706;
+    border-bottom: 1px dashed;
+    margin-bottom: 1rem;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.contact__form{
+    display: flex;
+    flex-direction: column;
+    box-shadow: 2px 2px 2px 2px #7F7979;
+    padding: 2rem;
+}
+
+
+label input, textarea{
+    width: 100%;
+    padding: 1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.2rem;
+    border-radius: 1%;
+    border: none;
+    background-color: #EBE9EB;
+    color: #7F7979;
+}
+
+.contact__button{
+    background-color: #EBE9EB;
+}
+
+label input:focus-visible, textarea:focus{
+    outline: 1px solid var(--primary-color);
+    background-color: #EBE9EB;
+}
+
+/* Contact Us Styles End */
+
+/* Footer Section styles start */
+
+footer{
+    background-color: var(--primary-color);
+    text-align: center;
+    padding: 2rem 0;
+    color: var(--white-color);
+}
+
+/* Footer Section styles start */
+
+/* Media Querries */
+
+/* Home Page */
+
+@media only screen and (max-width: 840px) {
+
+    header{
+        padding: 0.4rem 2rem;
+    }
+
+    section{
+        padding: 0 2rem;
+    }
+
+    .navigation{
+        display: none;
+    }
+
+    .navigation-md{
+        width: 100%;
+        position: absolute;
+        top: 10px;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        background-image: linear-gradient(transparent, var(--primary-color), var(--primary-color));
+    }
+
+    .hamburger{
+        display: flex;
+        flex-direction: column;
+        gap: 0.4rem;
+        cursor: pointer;
+    }
+
+    .hamburger span{
+        width: 30px;
+        height: 3px;
+        background-color: var(--white-color);
+    }
+
+    .close{
+        font-size: 3rem;
+        color: var(--white-color);
+        cursor: pointer;
+        z-index: 2;
+    }
+
+    .hero{
+        height: 100%;
+    }
+
+    .hero__button{
+        margin-bottom: 2rem;
+    }
+
+    .hero__description{
+        flex-basis : 100%;
+    }
+
+    .hero__description h2{
+        text-wrap: wrap;
+        text-align: center;
+        line-height: 2.6rem;
+        padding-top: 6rem;
+    }
+
+    .hero__image{
+        display: none;
+    }
+
+    /* About Page */
+
+    .about{
+        flex-wrap: wrap;
+    }
+
+    .about__description, .about__image{
+        flex-basis: 100%;
+    }
+
+    .contact{
+        width: 100%;
+    }
+}
